# ai-pulse-data

./: .env.example  .gitignore  DATA_QUALITY.md  README.md  RUNBOOK.md  pyproject.toml  spend-ledger.json
.github/workflows/: ci.yml  daily.yml
data/: manifest.json
data/2026-07-15/: apps.json  hf-trending.json  rankings.json  sdk-geo.json
data/2026-07-16/: apps.json  facts.json  geo-adoption.json  geo-regions.json  hf-trending.json  rankings.json  sdk-geo.json
data/2026-07-17/: apps.json  commentary.json  facts.json  geo-regions.json  hf-trending.json  rankings.json  sdk-geo.json
data/2026-07-18/: apps.json  commentary.json  facts.json  geo-regions.json  hf-trending.json  rankings.json  sdk-geo-trend.json  sdk-geo.json
data/2026-07-19/: apps.json  commentary.json  facts.json  geo-regions.json  hf-trending.json  rankings.json  sdk-geo-trend.json  sdk-geo.json
data/2026-07-20/: apps.json  commentary.json  facts.json  geo-regions.json  hf-trending.json  rankings.json  sdk-geo-trend.json  sdk-geo.json
data/2026-07-21/: apps.json  commentary.json  facts.json  geo-regions.json  hf-trending.json  rankings.json  sdk-geo-trend.json  (+1 more)
evals/: README.md  run_evals.py
prompts/: commentary-v1.md  commentary-v2.md
scripts/: backfill.py  ingest_geo_adoption.py  ingest_occupations.py
tests/: test_ai_transparency.py  test_commentary.py  test_evals.py  test_facts.py  test_history_rollup.py  test_ingest_occupations.py  test_pipeline.py  test_pipeline_facts.py  test_quality.py  test_regions.py  test_sdk_geo_history.py  test_spend_ledger.py  test_transform.py
(+76 files in other folders)
