[project]
name = "aipulse"
version = "0.4.1"
description = "AI Pulse data pipeline: fetch, validate, normalize, publish"
authors = [
    { name = "Ronnie Chong", email = "ronniechong@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "python-dotenv>=1.1",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "responses>=0.25",
    "ruff>=0.7",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
